PLFM-7719: Stream node snapshots to kinesis